plugins {
  id "com.gradle.plugin-publish" version "1.1.0"
  id "org.sonarqube" version "4.3.0.3225"
  id "jacoco"
}

description = 'plugin'

java {
  sourceCompatibility = JavaVersion.VERSION_21
  targetCompatibility = JavaVersion.VERSION_21
}

dependencies {
  compileOnly 'org.projectlombok:lombok:1.18.40'
  annotationProcessor 'org.projectlombok:lombok:1.18.40'
  implementation 'io.github.classgraph:classgraph:4.8.184'
  testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
  testImplementation 'org.hamcrest:hamcrest:2.2'
  testImplementation 'org.mockito:mockito-all:1.10.19'
  testImplementation 'org.junit-pioneer:junit-pioneer:1.9.1'
  testImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
  testImplementation 'com.github.romankh3:image-comparison:4.4.0'
  testRuntimeOnly 'net.sourceforge.plantuml:plantuml:1.2023.10'
  testRuntimeOnly 'org.apache.xmlgraphics:fop:2.9'
  testRuntimeOnly 'org.apache.xmlgraphics:batik-all:1.17'
}

tasks.withType(JavaCompile) {
  configure(options) {
    options.release = 21
    options.compilerArgs << '-Xlint:unchecked' << '-Werror'
  }
}
tasks.withType(Javadoc) {
  options.addStringOption('Xdoclint:none', '-quiet')
}

test {
  useJUnitPlatform()
  jvmArgs '--add-opens', 'java.base/java.nio.file=ALL-UNNAMED'
  jvmArgs '--add-opens', 'java.base/java.nio.file.spi=ALL-UNNAMED'
}

jacocoTestReport {
  dependsOn compileJava, processResources // suppress warnings
  dependsOn test // tests are required to run before generating the report
  reports {
    csv.required = true
    xml.required = true
  }

  afterEvaluate {
    classDirectories.setFrom(files(classDirectories.files.collect {
      fileTree(dir: it, exclude: ["**/PlantUmlPlugin.class"])
    }))
  }
}

check {
  dependsOn jacocoTestReport
}

sonarqube {
  properties {
    property "sonar.projectKey", "Plunts_plantuml-gradle-plugin"
    property "sonar.projectName", "plantuml-gradle-plugin"
    property "sonar.organization", "plunts"
    property "sonar.exclusions", "**/RegExUtil.java"
    property "sonar.coverage.exclusions", "**/PlantUmlPlugin.java,**/RegExUtil.java"
  }
}

gradlePlugin {
  website = 'https://gitlab.com/Plunts/plantuml-gradle-plugin'
  vcsUrl = 'https://gitlab.com/Plunts/plantuml-gradle-plugin'

  plugins {
    plantUmlPlugin {
      id = 'io.gitlab.plunts.plantuml'
      displayName = 'PlantUML Generator'
      description = 'Gradle plugin to build PlantUML diagrams from code (for living and up-to-date documentation)'
      implementationClass = 'io.gitlab.plunts.gradle.plantuml.plugin.PlantUmlPlugin'
      tags.set([
              'plantuml',
              'plantuml-diagrams',
              'plantuml-generator',
              'living-documentation'
      ])
    }
  }
}